# raps-demo

./: .clippy.toml  .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml
recordings/scripts/: acc-demo.yr  auth-demo.yr  data-management-demo.yr  design-automation-demo.yr  end-to-end-demo.yr  mcp-demo.yr  model-derivative-demo.yr  objects-demo.yr  oss-demo.yr  pipelines-demo.yr  raps-hero.yr  reality-capture-demo.yr  shell-demo.yr  webhooks-demo.yr
sample-models/autodesk/revit/: rstadvancedsamplefamily.rfa
showcase/: index.html
src/: lib.rs  main.rs
src/assets/: mod.rs
src/config/: auth.rs  manager.rs  mod.rs  types.rs
src/demo/: mod.rs
src/resource/: cleanup.rs  mod.rs  tracker.rs  types.rs
src/tui/: flowchart.rs  mod.rs  preflight.rs
src/utils/: mod.rs  serde_helpers.rs
src/workflow/: client.rs  discovery.rs  executor.rs  mod.rs  types.rs
tests/: integration_test.rs
workflows/: README.md
workflows/acc/: acc-issues-workflow.yaml
workflows/data-management/: hub-explorer.yaml
workflows/design-automation/: da-engine-explorer.yaml
workflows/end-to-end/: viewer-pipeline.yaml
workflows/model-derivative/: multi-format.yaml  revit-translation.yaml  stapler-pipeline.yaml
workflows/oss/: auth-management.yaml  batch-upload.yaml  bucket-lifecycle.yaml  upload-download.yaml
workflows/reality-capture/: photoscene-pipeline.yaml
workflows/webhooks/: webhook-management.yaml
